--- a/test.html
+++ b/test.html
@@ -1,4 +1,5 @@
 <b><h1>다이아몬드+ 티어의 최근 24시간 매치 기록으로 통계가 자동 산출됩니다.</h1>
 
-<i>최종 업데이트: 2021-06-16 17:10</b></i>
+    <string>이것도 테스트</string>
+<i><u>최종 업데이트: 2021-06-16 17:10</b></i></u>
 
