--- a/test.html
+++ b/test.html
@@ -1,5 +1,12 @@
-<b><h1>다이아몬드+ 티어의 최근 24시간 매치 기록으로 통계가 자동 산출됩니다.</h1>
-
+ 티어의 최근 24시간 매치 기록으로 통계가 자동 산출됩니다.</h1>
+종료 후 <br>
     <string>이것도 테스트</string>
-<i><u>최종 업데이트: 2021-06-16 17:10</b></i></u>
+<P>this is paragraph</P>
+<P>this is paragraph</P>
+<P>this is paragraph</P>
+<P>this is paragraph</P>
 
+<i><u>최종 업데이트: 2021-06-16 17:10</b></i></u>
+<img src="img_girl.jpg" alt="Girl in a jacket" width="500" height="600">
+
+<a href="https://www.w3schools.com">Visit W3Schools.com!</a>
