--- a/test.html
+++ b/test.html
@@ -7,6 +7,8 @@
 <P>this is paragraph</P>
 
 <i><u>최종 업데이트: 2021-06-16 17:10</b></i></u>
-<img src="img_girl.jpg" alt="Girl in a jacket" width="500" height="600">
 
-<a href="https://www.w3schools.com">Visit W3Schools.com!</a>
+
+<a href="https://www.w3schools.com" target=_black>
+    <img src="img_girl.jpg" alt="Girl in a jacket" width="500" height="600">
+</a>
