--- a/test.html
+++ b/test.html
@@ -10,5 +10,19 @@
 
 
 <a href="https://www.w3schools.com" target=_black>
-    <img src="img_girl.jpg" alt="Girl in a jacket" width="500" height="600">
+    <img src="img_girl.jpg" alt="Girl in a jacket" width="50" height="60">
 </a>
+
+<p>The ol element defines an ordered list:</p>
+<ol>
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ol>
+
+<p>The ul element defines an unordered list:</p>
+<ul>
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ul>
