--- a/test.html
+++ b/test.html
@@ -7,22 +7,28 @@
 <P>this is paragraph</P>
 
 <i><u>최종 업데이트: 2021-06-16 17:10</b></i></u>
-
+<style>
+    table, th, td {
+      border: 1px solid black;
+    }
+</style>
 
 <a href="https://www.w3schools.com" target=_black>
     <img src="img_girl.jpg" alt="Girl in a jacket" width="50" height="60">
 </a>
 
-<p>The ol element defines an ordered list:</p>
-<ol>
-  <li>Coffee</li>
-  <li>Tea</li>
-  <li>Milk</li>
-</ol>
+<table>
+    <tr>
+      <th>Month</th>
+      <th>Savings</th>
+    </tr>
+    <tr>
+      <td>January</td>
+      <td>$100</td>
+    </tr>
+    <tr>
+      <td>February</td>
+      <td>$80</td>
+    </tr>
+  </table>
 
-<p>The ul element defines an unordered list:</p>
-<ul>
-  <li>Coffee</li>
-  <li>Tea</li>
-  <li>Milk</li>
-</ul>
