--- a/test.html
+++ b/test.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>대충 웹페이지</title>
+  <style>
+    table, th, td {
+      border: 1px solid black;
+    }
+  </style>
+</head>
+<body>
+ 
  티어의 최근 24시간 매치 기록으로 통계가 자동 산출됩니다.</h1>
 종료 후 <br>
     <string>이것도 테스트</string>
@@ -7,11 +19,7 @@
 <P>this is paragraph</P>
 
 <i><u>최종 업데이트: 2021-06-16 17:10</b></i></u>
-<style>
-    table, th, td {
-      border: 1px solid black;
-    }
-</style>
+
 
 <a href="https://www.w3schools.com" target=_black>
     <img src="img_girl.jpg" alt="Girl in a jacket" width="50" height="60">
@@ -31,4 +39,5 @@
       <td>$80</td>
     </tr>
   </table>
-
+</body>
+</html>
