--- a/test.html
+++ b/test.html
@@ -12,18 +12,34 @@
  
  티어의 최근 24시간 매치 기록으로 통계가 자동 산출됩니다.</h1>
 종료 후 <br>
-    <string>이것도 테스트</string>
-<P>this is paragraph</P>
-<P>this is paragraph</P>
-<P>this is paragraph</P>
-<P>this is paragraph</P>
+    <strong>이것도 테스트</strong>
+    <button type="button" onclick="testFunc()">
+      <img src="img_girl.jpg" alt="Girl in a jacket" width="50" height="60">
+    </button>
+
 
 <i><u>최종 업데이트: 2021-06-16 17:10</b></i></u>
-
+<script>
+function testFunc()
+{
+  alert('Hello World!')
+}
+</script>
 
 <a href="https://www.w3schools.com" target=_black>
     <img src="img_girl.jpg" alt="Girl in a jacket" width="50" height="60">
 </a>
+
+<form action="/action_page.php">
+  <label for="fname">First name:</label>
+  <input type="text" id="fname" name="fname"><br><br>
+  <label for="lname">Last name:</label>
+  <input type="text" id="lname" name="lname"><br><br>
+  <input type="submit" value="Submit">
+</form>
+
+<p>Click the "Submit" button and the form-data will be sent to a page on the 
+server called "action_page.php".</p>
 
 <table>
     <tr>
