--- a/test.html
+++ b/test.html
@@ -6,7 +6,10 @@
     table, th, td {
       border: 1px solid black;
     }
-  </style>
+    h1 {color:red;}
+    p {color:blue;}
+  <style>
+    
 </head>
 <body>
  
@@ -38,8 +41,7 @@ function testFunc()
   <input type="submit" value="Submit">
 </form>
 
-<p>Click the "Submit" button and the form-data will be sent to a page on the 
-server called "action_page.php".</p>
+<p>My mother has <span style="color:blue">blue</span> eyes.</p>
 
 <table>
     <tr>
